Fix nav on lg screen and collapse

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,39 +1,64 @@
+/* PAGE TITLE */
 @font-face {
   font-family: 'American Captian';
   src: url(../fonts/AmericanCaptain-MdEY.otf);
 }
-
 @font-face {
   font-family: 'Breezed Caps';
   src: url(../fonts/BreezedcapsBoldoblique-Epvj.ttf);
 }
-
 body {
   font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
-
 a {
   color: #00b7ff;
 }
-
 img {
   max-width: 100%;
+}
+/* /////////NAVBAR///////// */
+.navbar .title {
+  font-size: 1.6em;
+}
+/* special rule for very small screens */
+@media (max-width: 300px) {
+  .navbar .title {
+    font-size: 1em;
+  }
+}
+.navbar .navbar-brand {
+  margin-right: 0;
+}
+.navbar .navbar-brand img {
+  width: 75px;
+  height: auto;
+}
+/* styles for accordion   */
+#navbarSupportedContent {
+  position: absolute;
+  right: 0;
+  z-index: 2;
+  margin-right: 10px;
+  width: 200px;
+  text-align: center;
+  top: 100px;
+}
+ul.navbar-nav {
+  background: rgba(0, 0, 0, 0.8);
+}
+.navbar-nav .nav-link {
+  color: white;
 }
 
 .title {
   font-family: 'American Captian', 'PT Sans', Helvetica, Arial, sans-serif;
   text-align: center;
 }
-
-.navbar .title {
-  font-size: 35px;
-}
-
+/* index page hero */
 .sub-title {
   font-family: 'Lobster', cursive;
   text-align: center;
 }
-
 .index-hero {
   background-image: url('/images/max.jpg');
   background-repeat: no-repeat;
@@ -46,44 +71,35 @@ img {
   width: 100%;
   flex-direction: column;
 }
-
 .index-hero h1 {
   font-size: 3.5rem;
 }
-
 .index-hero h5 {
   font-size: 1.75rem;
 }
-
 .index-title-container {
   padding-top: 50px;
 }
-
 .index-title-container .demo-button {
   display: flex;
   justify-content: center;
 }
-
 .index-main {
   background-color: whitesmoke;
 }
 
-.driver-card-page,
-.team-card-page,
 .driver-card-demo,
 .team-card-demo {
   padding: 0 50px;
   margin-bottom: 50px;
 }
-
-.team-card,
-.driver-card,
+.team-card-page,
+.driver-card-page,
 .all-drivers,
 .all-teams {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-
 .all-drivers,
 .all-teams {
   display: flex;
@@ -92,102 +108,82 @@ img {
   padding-left: 0;
   list-style: none;
 }
-
 .all-drivers-container,
 .all-teams-container {
   display: flex;
   flex-direction: column;
 }
-
 .all-teams-container {
   align-items: center;
 }
-
 .all-drivers a:hover,
 .all-teams a:hover {
   text-decoration: none;
 }
-
 .all-drivers li,
 .all-teams li {
   transition: border 0.1s;
 }
-
 .all-drivers .driver-card.mini li:hover,
 .all-teams .team-card.mini li:hover {
   border: 2px solid blue;
 }
-
 .all-drivers .driver-card.mini li,
 .all-teams .team-card.mini li {
   border: 2px solid transparent;
 }
-
 .all-teams li {
   overflow: auto;
 }
-
 .all-teams .team-card.mini li.selected,
 .all-drivers .driver-card.mini li.selected {
   border: 2px solid blue;
 }
-
 .all-drivers .driver-card.mini,
 .all-teams .team-card.mini {
   width: 200px;
   overflow: auto;
 }
-
 .all-drivers .driver-card.full,
 .all-teams .team-card.full {
   max-width: 400px;
   margin-bottom: 20px;
   margin-right: 10px;
 }
-
 .all-drivers .driver-title-container {
   display: flex;
   align-items: center;
 }
-
 .all-drivers .mini .driver-title-container {
   min-height: 50px;
 }
-
 .all-drivers .full .driver-title-container {
   min-height: 100px;
 }
-
 .all-drivers .mini .driver-title-container,
 .all-drivers .mini .driver-title-container h6,
 .all-drivers .mini .main-image-container,
 .all-drivers .mini .main-image-container img {
   pointer-events: none;
 }
-
 .demo-container .btn-container {
   display: flex;
   justify-content: center;
   margin: 10px;
 }
-
 .demo-container .btn-container .btn {
   width: 30%;
 }
-
 .select-text {
   font-family: 'PT Sans', Helvetica, Arial, sans-serif;
 }
-
 h6.select-text {
   align-self: center;
 }
-
 .demo-driver-select {
   border-bottom: solid gray;
   margin-bottom: 15px;
 }
-
 .demo-driver-select,
 .demo-team-select {
   margin-top: 10px;
@@ -195,68 +191,55 @@ h6.select-text {
   display: flex;
   flex-direction: column;
 }
-
 .main-image {
   max-width: 100%;
 }
-
 .car-image {
   max-width: 50%;
   align-self: flex-end;
 }
-
 .right-column {
   display: flex;
   background-color: whitesmoke;
   flex-direction: column;
 }
-
 .team-card .drivers {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-
 .team-card .driver span {
   margin-right: 10px;
 }
-
 .team-card .driver .flag {
   max-width: 35px;
 }
-
 .team-card .drivers {
   min-height: 60px;
   margin-bottom: 10px;
 }
-
 .team-title-container {
   display: flex;
   justify-content: center;
 }
-
 .driver-title-container {
   display: flex;
   justify-content: space-around;
 }
-
 .driver-title {
   display: flex;
   min-height: 60px;
   justify-content: center;
 }
-
 .driver-title h6 {
   align-self: center;
   font-family: 'Montserat', sans-serif;
   font-size: 25px;
   margin-right: 10px;
 }
-
 .driver-title .flag-img-container {
   align-self: center;
 }
-
 .team-title {
   font-family: 'Montserat', sans-serif;
   display: flex;
@@ -265,21 +248,18 @@ h6.select-text {
   min-height: 60px;
   text-align: center;
 }
-
 .driver-logo-container {
   min-height: 60px;
   align-self: center;
   max-width: 150px;
   margin: 10px 0;
 }
-
 .table-container {
   display: flex;
   justify-content: center;
   font-size: 1rem;
   padding-bottom: 20px;
 }
-
 .stat-key {
   font-weight: bold;
 }
@@ -288,108 +268,101 @@ h6.select-text {
   display: flex;
   justify-content: center;
 }
-
 .flag-img-container {
   max-width: 50px;
 }
 
-#navbarSupportedContent {
-  position: absolute;
-  right: 0;
-  z-index: 2;
-  margin-right: 10px;
-  width: 100px;
-  text-align: center;
-}
-
-ul.navbar-nav {
-  background: rgba(0, 0, 0, 0.8);
-}
-
-.navbar-nav li a {
-  color: white;
-}
-
 /* From this and up */
 @media (min-width: 576px) {
-  .table-container {
-    font-size: 1.2rem;
-  }
-
-  .demo-container .btn-container .btn {
-    width: initial;
-  }
-
-  .demo-container .btn-container {
-    margin: initial;
-  }
-
+  /* /////////NAVBAR///////// */
   .navbar .title {
     font-size: 3em;
   }
-
+  .navbar .navbar-brand img {
+    width: 100px;
+  }
+  .navbar .navbar-brand {
+    margin-right: 1rem;
+  }
+  .table-container {
+    font-size: 1.2rem;
+  }
+  .demo-container .btn-container .btn {
+    width: initial;
+  }
+  .demo-container .btn-container {
+    margin: initial;
+  }
   .index-hero {
     min-height: 400px;
   }
-
   .center {
     display: flex;
     justify-content: center;
   }
-
   h6.select-text {
     align-self: flex-start;
   }
 }
-
 /* From this and up */
 @media (min-width: 768px) {
   .navbar .title {
     font-size: 4em;
   }
-
   .left-column {
     width: 50%;
   }
-
   .right-column {
     width: 50%;
   }
-
   .card.driver-card,
   .card.team-card {
     flex-direction: row;
   }
-
   .driver-table-container {
     margin-top: 15px;
   }
-
-  /* .team-card-container {
+  .team-card-container-lg {
     flex-direction: column;
-  } */
-
-  .team-card .drivers {
+  }
+  .team-card-container-lg .drivers {
     font-size: 18px;
   }
-
-  .team-card .drivers .driver {
+  .team-card-container-lg .drivers .driver {
     margin: 5px 0;
   }
-
   .table-container {
     height: 100%;
     align-items: center;
   }
 }
-
 /* From this and up */
 @media (min-width: 999px) {
+  .navbar .navbar-brand {
+    margin-right: 8rem;
+  }
+  .navbar .nav-item {
+    font-size: 1.5em;
+  }
+  ul.navbar-nav {
+    background: #f8f9fa;
+  }
+  .collapse.navbar-collapse {
+    margin-right: 1em;
+  }
+  /* styles for accordion   */
+  #navbarSupportedContent {
+    position: static;
+    right: initial;
+    z-index: initial;
+    width: auto;
+    text-align: inherit;
+    top: initial;
+  }
   .table-container {
     font-size: 1.2rem;
   }
-
-  .team-card .drivers {
+  .team-card-container-lg .drivers {
     font-size: 24px;
   }
 }
